[package]
name = "releaser"
version = "0.14.0"
description = "Crate or workspace releasing tool. All crates from workspace will be released on crates.io"
authors = ["egoroff <egoroff@gmail.com>"]
repository = "https://github.com/aegoroff/releaser"
homepage = "https://github.com/aegoroff/releaser"
keywords = ["release", "tool", "crate"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "=1.0.26"
toml = "=0.9.6"
toml_edit = "=0.23.4"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.143"
vfs = "=0.12.2"
clap = { version = "=4.5.47", features = ["std", "color", "suggestions", "cargo", "derive"] }
clap_complete = "=4.5.57"
petgraph = "=0.8.2"
handlebars = "=6.3.2"
sha2 = "=0.10.9"
hex = "=0.4.3"
url = "=2.5.7"
color-eyre = "=0.6.5"
bugreport = "=0.5.1"
console = "=0.16.1"

[dev-dependencies]
mockall = "=0.13.1"
rstest = "=0.26.1"

[profile.release]
lto = true
strip = true
panic = 'abort'

[lints.rust]
unsafe_code = "forbid"
