[package]
name = "releaser"
version = "0.16.0"
description = "Crate or workspace releasing tool. All crates from workspace will be released on crates.io"
authors = ["egoroff <egoroff@gmail.com>"]
repository = "https://github.com/aegoroff/releaser"
homepage = "https://github.com/aegoroff/releaser"
keywords = ["release", "tool", "crate"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "=1.0.28"
toml = "=1.1.3"
toml_edit = "=0.25.13"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
vfs = "=0.13.0"
clap = { version = "=4.6.1", features = ["std", "color", "suggestions", "cargo", "derive"] }
clap_complete = "=4.6.7"
petgraph = "=0.8.3"
handlebars = "=6.4.3"
sha2 = "=0.11.0"
hex = "=0.4.3"
url = "=2.5.8"
color-eyre = "=0.6.5"
bugreport = "=0.6.0"
console = "=0.16.4"

[dev-dependencies]
mockall = "=0.15.0"
rstest = "=0.26.1"

[profile.release]
lto = true
strip = true
panic = 'abort'

[lints.rust]
unsafe_code = "forbid"
